HH02: Clean up the code.